@@ -54,6 +54,7 @@ Bug fixes
  * Documents created by a user are no longer deleted when the user is deleted
  * Fixed a crash in ``RedirectMiddleware`` when a middleware class before ``SiteMiddleware`` returns a response (Josh Schneier)
  * Fixed error retrieving the moderator list on pages that are covered by multiple moderator permission records (Matt Fozard)
+ * Ordering pages in the explorer by reverse 'last updated' time now puts pages with no revisions at the top
 
 
 Upgrade considerations
